# Chorum

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PLAN_DESARROLLO.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 936ecb44e45c_initial_graphs_and_executions.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  deps.py  schemas.py
backend/app/api/routes/: __init__.py  executions.py  graphs.py
backend/app/core/: __init__.py  checkpointing.py  compiler.py  conditions.py  executor.py  handlers.py  schema.py  state.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/evals/: __init__.py
backend/app/models/: __init__.py
backend/app/policy/: __init__.py
backend/app/tools/: __init__.py
backend/tests/: conftest.py  test_health.py
backend/tests/api/: conftest.py  test_executions.py  test_graphs.py
backend/tests/core/: conftest.py  test_checkpoint_recovery.py  test_condition.py  test_conditions.py  test_cycle.py  test_handlers.py  test_pipeline_linear.py  test_schema.py  test_state.py
docs/: README.md  airgap-mode.md  architecture.md  graph-schema.md  security.md  time-travel.md
examples/: README.md  linear_pipeline.json
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  setupTests.ts
frontend/tests/: App.test.tsx
scripts/: run_example.py  setup.sh
