[project]
name = "chorum-backend"
version = "0.0.0"
description = "Chorum — backend FastAPI y motor de orquestación multi-agente."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    # Motor de orquestación (Fase 1). El checkpointer sqlite habilita el time-travel (Fase 4).
    "langgraph>=1.2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "aiosqlite>=0.20.0",
    # Persistencia y migraciones (Fase 2). SQLModel trae SQLAlchemy; psycopg es el driver
    # de Postgres que ya usan docker-compose y .env.example (postgresql+psycopg://).
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
]

# Proyecto de aplicación (no librería): sin [build-system], uv gestiona el entorno
# sin empaquetar/instalar `app` como paquete. `app` es importable desde el cwd (backend/).

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
]

# ---- Ruff (lint + format) ----
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]
# Código generado/templado de Alembic (env.py y migraciones): fuera del lint estricto.
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# Los helpers de FastAPI (Depends/Body/Query/...) se usan como defaults de argumento por diseño;
# no son el antipatrón de "call en default" que B008 busca.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Body",
    "fastapi.Depends",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Query",
]

[tool.ruff.format]
quote-style = "double"

# ---- Mypy (type checking estricto) ----
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
exclude = ['\.venv', 'build', 'dist', 'alembic']

# langgraph-checkpoint (namespace langgraph.checkpoint.*) no distribuye py.typed todavía.
[[tool.mypy.overrides]]
module = ["langgraph.checkpoint.*"]
ignore_missing_imports = true

# ---- Pytest ----
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
